# g2labs-platform

./: CMakeLists.txt  README.md
cmake/: setup.cmake
platform/: CMakeLists.txt
platform/default/: CMakeLists.txt  main.c
platform/esp32/: CMakeLists.txt  main.c
platform/esp32/esp32s3/: .gitignore  partition_table.csv  sdkconfig.defaults
platform/native/: main.c
source/: CMakeLists.txt  g2labs-platform.h
source/platform/: CMakeLists.txt
source/platform/esp32/: CMakeLists.txt  g2labs-platform.c  main.c
source/platform/esp32/esp32s3/: partition-table-sdkconfig.template  partition_table.csv  sdkconfig.defaults
source/platform/native/: CMakeLists.txt  g2labs-platform.c  main.c
